War of the Americas
And new american icon for cbs

--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -4,6 +4,7 @@ AGRESSION_CIVIL_WAR_NAME;$ORDER$$FIRST$ Civil War;$ORDER$ guerre civile $FIRST$;
 AGRESSION_CIVIL_WAR_NAME_ARC_ENT;The $ORDER$Platine War;;;;;;;;;;;;;x
 AGRESSION_CIVIL_WAR_NAME_ENG_EIC;The East India Company Uprising;;;;;;;;;;;;;x
 AGRESSION_CIVIL_WAR_NAME_QNG_TPG;$ORDER$Taiping Rebellion;;;;;;;;;;;;;x
+AGRESSION_CONQUEST_OF_LOUISIANA;The French Aggression for Louisiana;;;;;;;;;;;;;x
 AGRESSION_CUT_DOWN_TO_SIZE_OTTOMAN_WAR_NAME;The$ORDER$Great Eastern Crisis;;;;;;;;;;;;;x
 AGRESSION_CUT_DOWN_TO_SIZE_OTTOMAN_WAR_NAME_RUS_TUR;The Great Eastern Crisis;;;;;;;;;;;;;x
 AGRESSION_CUT_DOWN_TO_SIZE_WAR_NAME;$ORDER$War of $FIRST$ Aggression;$ORDER$$FIRST$ guerre d'aggression;$ORDER$$FIRST$er Angriffskrieg;;;;;;;;;;;x
@@ -212,8 +213,7 @@ NORMAL_CIVIL_WAR_NAME_USA_CSA;The $ORDER$American Civil War;$ORDER$ guerre de ré
 NORMAL_CIVIL_WAR_NAME_USA_CSA_CSA;$ORDER$War of Northern Aggression;$ORDER$ guerre d’agression nordiste;$ORDER$Krieg des Nördlichen Angriffs;;;;;;;;;;;x
 NORMAL_CIVIL_WAR_NAME_USA_CSA_USA;$ORDER$War of the Rebellion;$ORDER$ guerre de rébellion;$ORDER$Rebellionskrieg;;;;;;;;;;;x
 NORMAL_CIVIL_WAR_NAME_USA_FSA;The $ORDER$American Civil War;$ORDER$ guerre de rébellion;$ORDER$Rebellionskrieg;;;;;;;;;;;x
-NORMAL_CONQUEST_OF_LOUISIANA_FRA_USA_FRA;The Reconquest of Louisiane;;;;;;;;;;;x
-NORMAL_CONQUEST_OF_LOUISIANA_FRA_USA_USA;The French Aggression for Louisiana;;;;;;;;;;;x
+NORMAL_CONQUEST_OF_LOUISIANA;The Conquest of Louisiane;;;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_OTTOMAN_WAR_NAME;The$ORDER$Great Eastern Crisis;;;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_OTTOMAN_WAR_NAME_RUS_TUR;The Great Eastern Crisis;;;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_WAR_NAME;$ORDER$$FIRST$–$SECOND$ War;Guerre $ORDER$$FIRST$-$SECOND$;$ORDER$$FIRST$-$SECOND$er Krieg;;;;;;;;;;;x
