--- a/TGC/localisation/00_events_0090000.csv
+++ b/TGC/localisation/00_events_0090000.csv
@@ -2491,3 +2491,6 @@ EVTOPTA99977;I want Colonial Railroading;;;;;;;;;;;;;x
 EVTOPTA99991;Time to put the Burmese down.;;;;;;;;;;;;;x
 EVTOPTA99999;North and South will stand together!;;;;;;;;;;;;;x
 EVTOPTB99999;This does not concern us.;;;;;;;;;;;;;x
+EVTNAME99303;The Great Game Lost;;;;;;;;;;;;;x
+EVTOPTA99303;We will look elsewhere;;;;;;;;;;;;;x
+EVTDESC99303;We have lost the Great Game and our rival can now freely influence and expand in Central Asia;;;;;;;;;;;;;x
