--- a/TGC/localisation/00_map-regions.csv
+++ b/TGC/localisation/00_map-regions.csv
@@ -686,7 +686,8 @@ ARG_2384;Córdoba;;;;;;;;;;;;;x
 ARG_2385;La Rioja;;;;;;;;;;;;;x
 ARG_2387;San Juan;;;;;;;;;;;;;x
 ARG_2389;Mendoza;;;;;;;;;;;;;x
-ARG_2391;Río Negro;;;;;;;;;;;;;x
+ARG_2391;Ñedquen;;;;;;;;;;;;;x
+ARG_3789;Curú Leufvú;;;;;;;;;;;;;x
 ARG_2395;Pampa Occidental;;;;;;;;;;;;;x
 ARG_3599;Pampa Oriental;;;;;;;;;;;;;x
 ARG_2392;Patagonia;;;;;;;;;;;;;x
