--- a/TGC/localisation/00_events_0090000.csv
+++ b/TGC/localisation/00_events_0090000.csv
@@ -2494,3 +2494,6 @@ EVTOPTB99999;This does not concern us.;;;;;;;;;;;;;x
 EVTNAME99303;The Great Game Lost;;;;;;;;;;;;;x
 EVTOPTA99303;We will look elsewhere;;;;;;;;;;;;;x
 EVTDESC99303;We have lost the Great Game and our rival can now freely influence and expand in Central Asia;;;;;;;;;;;;;x
+EVTNAME99304;The Great Game Won;;;;;;;;;;;;;x
+EVTOPTA99304;Victorious!;;;;;;;;;;;;;x
+EVTDESC99304;We have won the Great Game and our rivals influence and power is vaning in Central Asia, while ours grow. We can now freely expand our reach in this region without further $FROMCOUNTRY_ADJ$ meddling.;;;;;;;;;;;;;x
