baseline cleanup and british america disabled

--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -95,6 +95,8 @@ begin_disunited_states;Disunited States;;;;;;;;;;;;;x
 begin_disunited_states_desc;With the transition of the United States away from democracy, the Sons of Liberty have arisen in an effort fight what they call tyranny. It will take time for this resistance to calm, and until it does there shall be much talk of secession and even open revolt.;;;;;;;;;;;;;x
 begin_revolution;Revolutionary State;;;;;;;;;;;;;x
 begin_revolution_desc;Our country is a fledgling state, founded in the midst of chaos and rebellion. But the people are willing to fight!;;;;;;;;;;;;;x
+begin_revolution2;Revolutionary State;;;;;;;;;;;;;x
+begin_revolution2_desc;Our country is a fledgling state, founded in the midst of chaos and rebellion. But the people are willing to fight!;;;;;;;;;;;;;x
 being_dismantled;Under Dismantlement;;;;;;;;;;;;;
 being_dismantled_desc;Our country has lost and its empire is being divided by the winners.;;;;;;;;;;;;;
 benefactor_ai;Benevolent Ruler;;;;;;;;;;;;;x
