French Conquest of Canada
2 new cbs

--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -137,10 +137,10 @@ dismantle_forts;Dismantle Fortifications;;Reiﬂt Forts ab;;;;;;;;;;;x
 dismantle_forts_desc;Dismantle forts and naval bases.;;Reiﬂt Forts und Marinest¸tzpunkte ab.;;;;;;;;;;;x
 dismantle_forts_setup;Dismantle forts and naval bases in $STATE$;;Reiﬂt Forts und Marinest¸tzpunkte in $STATE$ ab;;;;;;;;;;;x
 dismantle_forts_short;Dismantle constructions in $STATE$;;Reiﬂt Bauten in $STATE$ ab;;;;;;;;;;;x
-end_slave_trade;End the Atlantic Slave Trade;;;;;;;;;;;x
-end_slave_trade_desc;We must stop the inhumane practice of slave selling!;;;;;;;;;;;x
-end_slave_trade_setup;End the Atlantic Slave Trade;;;;;;;;;;;x
-end_slave_trade_short;End the Atlantic Slave Trade;;;;;;;;;;;x
+end_slave_trade;End the Atlantic Slave Trade;;;;;;;;;;;;;x
+end_slave_trade_desc;We must stop the inhumane practice of slave selling!;;;;;;;;;;;;;x
+end_slave_trade_setup;End the Atlantic Slave Trade;;;;;;;;;;;;;x
+end_slave_trade_short;End the Atlantic Slave Trade;;;;;;;;;;;;;x
 enforce_clayton_treaty;Enforce Clayton-Bulwer Treaty.;;;;;;;;;;;;;x
 enforce_clayton_treaty_desc;Enforce the Clayton-Bulwer Treaty.;;;;;;;;;;;;;x
 enforce_clayton_treaty_setup;Enforce the Clayton-Bulwer Treaty.;;;;;;;;;;;;;x
@@ -161,14 +161,22 @@ free_peoples;Free People;Peuple libre;Freies Volk;;;;;;;;;;;x
 free_peoples_desc;Liberate a ßYcountryßW from its oppressors;LibÈrer un ßYpaysßW de ses oppresseurs;Befreien Sie ein ßYLandßW von seinen Unterdr¸ckern.;;;;;;;;;;;x
 free_peoples_setup;Hand $STATE$ back to $THIRD$ from $RECIPIENT$;Prendre $STATE$ ‡ $RECIPIENT$ pour le rendre ‡ $THIRD$;Geben Sie $STATE$ an $THIRD$ von $RECIPIENT$ zur¸ck;;;;;;;;;;;x
 free_peoples_short;$THIRD$ acquires $STATE$;$THIRD$ prend $STATE$;$THIRD$ erwirbt $STATE$;;;;;;;;;;;x
-french_conquest_of_louisiana_france;Conquer Louisiane;;;;;;;;;;;x
-french_conquest_of_louisiana_france_desc;Conquer the entire historical Territoire de la Louisiane, rightfully ours.;;;;;;;;;;;x
-french_conquest_of_louisiana_france_setup;Conquer Louisiane;;;;;;;;;;;x
-french_conquest_of_louisiana_france_short;Conquer Louisiane;;;;;;;;;;;x
-french_conquest_of_louisiana_usa;Defend Louisiana;;;;;;;;;;;x
-french_conquest_of_louisiana_usa_desc;Louisiana is rightfully ours and we must defend ourselves from French aggression.;;;;;;;;;;;x
-french_conquest_of_louisiana_usa_setup;Defend Louisiana;;;;;;;;;;;x
-french_conquest_of_louisiana_usa_short;Defend Louisiana;;;;;;;;;;;x
+french_conquest_of_canada_france;Liberate QuÈbec;;;;;;;;;;;;;x
+french_conquest_of_canada_france_desc;We must free our brethren living under British oppression!;;;;;;;;;;;;;x
+french_conquest_of_canada_france_setup;Liberate QuÈbec;;;;;;;;;;;;;x
+french_conquest_of_canada_france_short;Liberate QuÈbec;;;;;;;;;;;;;x
+french_conquest_of_canada_uk;Crush French Colonial Ambitions;;;;;;;;;;;;;x
+french_conquest_of_canada_uk_desc;Keep French colonial dreams as nothing more than that.;;;;;;;;;;;;;x
+french_conquest_of_canada_uk_setup;Obtain control of French colonies;;;;;;;;;;;;;x
+french_conquest_of_canada_uk_short;Obtain control of French colonies;;;;;;;;;;;;;x
+french_conquest_of_louisiana_france;Conquer Louisiane;;;;;;;;;;;;;x
+french_conquest_of_louisiana_france_desc;Conquer the entire historical Territoire de la Louisiane, rightfully ours.;;;;;;;;;;;;;x
+french_conquest_of_louisiana_france_setup;Conquer Louisiane;;;;;;;;;;;;;x
+french_conquest_of_louisiana_france_short;Conquer Louisiane;;;;;;;;;;;;;x
+french_conquest_of_louisiana_usa;Defend Louisiana;;;;;;;;;;;;;x
+french_conquest_of_louisiana_usa_desc;Louisiana is rightfully ours and we must defend ourselves from French aggression.;;;;;;;;;;;;;x
+french_conquest_of_louisiana_usa_setup;Defend Louisiana;;;;;;;;;;;;;x
+french_conquest_of_louisiana_usa_short;Defend Louisiana;;;;;;;;;;;;;x
 great_game_cb;The Great Game;RÈduire;Grˆﬂe reduzieren;;;;;;;;;;;x
 great_game_cb_desc;The Great Game between Russia and the British Empire demands that all ßYuncivilized nationsßW in Central Asia be turned into ßYpuppetsßW to prevent the other from doing the same.;Obliger un autre ßYpaysßW ?se dÈsarmer et ?nous verser des compensations;Zwischen Sie ein anderes ßYLandßW zur Abr¸stung und zu Reparationszahlungen an uns.;;;;;;;;;;;x
 great_game_cb_setup;$RECIPIENT$ becomes a puppet of $ACTOR$;$RECIPIENT$ devient satellite de $ACTOR$;$RECIPIENT$ wird eine Marionette von $ACTOR$;;;;;;;;;;;x
@@ -373,6 +381,14 @@ USS_monroe;Miranda Doctrine;Peuple libre;Freies Volk;;;;;;;;;;;;x;;;;;;;;;;;;;;
 USS_monroe_desc;Liberate the Latin people under foreign rule!;LibÂª®er un Âù≥paysÂä¨ de ses oppresseurs;Befreien Sie ein Âù≥LandÂä¨ von seinen UnterdrÓÖùkern.;;;;;;;;;;;x
 USS_monroe_short;Liberate the colonial holdings in the New World;$THIRD$ prend $STATE$;$THIRD$ erwirbt $STATE$;;;;;;;;;;;;x;;;;;;;;;;;;;;
 USS_monroe_setup;Liberate the colonial holdings in the New World;Prendre $STATE$ ?$RECIPIENT$ pour le rendre ?$THIRD$;Geben Sie $STATE$ an $THIRD$ von $RECIPIENT$ zurÓÖùk;;;;;;;;;;;;x;;;;;;;;;;;;;;
+war_of_the_americas_usa;Dismantle the USSA;;;;;;;;;;;;;x
+war_of_the_americas_usa_desc;South American has dared to challenge us, and now they'll face the consequences!;;;;;;;;;;;;;x
+war_of_the_americas_usa_setup;Dismantle the USA;;;;;;;;;;;;;x
+war_of_the_americas_usa_short;Dismantle the USA;;;;;;;;;;;;;x
+war_of_the_americas_ussa;Dismantle the USA;;;;;;;;;;;;;x
+war_of_the_americas_ussa_desc;We can't tolerate such a rival sharing the same continent of ours.;;;;;;;;;;;;;x
+war_of_the_americas_ussa_setup;Dismantle the USA;;;;;;;;;;;;;x
+war_of_the_americas_ussa_short;Dismantle the USA;;;;;;;;;;;;;x
 war_reparations;Reparations;;;;;;;;;;;;;x
 war_reparations_desc;Demand ßYreparationsßW from $RECIPIENT$.;;;;;;;;;;;;;x
 war_reparations_setup;Demand ßYreparationsßW from $RECIPIENT$.;;;;;;;;;;;;;x
