--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -213,6 +213,7 @@ NORMAL_CIVIL_WAR_NAME_USA_CSA;The $ORDER$American Civil War;$ORDER$ guerre de ré
 NORMAL_CIVIL_WAR_NAME_USA_CSA_CSA;$ORDER$War of Northern Aggression;$ORDER$ guerre d’agression nordiste;$ORDER$Krieg des Nördlichen Angriffs;;;;;;;;;;;x
 NORMAL_CIVIL_WAR_NAME_USA_CSA_USA;$ORDER$War of the Rebellion;$ORDER$ guerre de rébellion;$ORDER$Rebellionskrieg;;;;;;;;;;;x
 NORMAL_CIVIL_WAR_NAME_USA_FSA;The $ORDER$American Civil War;$ORDER$ guerre de rébellion;$ORDER$Rebellionskrieg;;;;;;;;;;;x
+NORMAL_CONQUEST_OF_CANADA;French Liberation of Québec;;;;;;;;;;;;;x
 NORMAL_CONQUEST_OF_LOUISIANA;The Conquest of Louisiane;;;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_OTTOMAN_WAR_NAME;The$ORDER$Great Eastern Crisis;;;;;;;;;;;;;x
 NORMAL_CUT_DOWN_TO_SIZE_OTTOMAN_WAR_NAME_RUS_TUR;The Great Eastern Crisis;;;;;;;;;;;;;x
@@ -231,6 +232,7 @@ NORMAL_PUNITIVE_EXPEDITION_WAR_NAME;The $ORDER$$FIRST$–$SECOND$ War;;;;;;;;;;;;;
 NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_ENG_PER;The $ORDER$Anglo–Persian War;;;;;;;;;;;;;x
 NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_ENG_QNG;The $ORDER$Opium War;;;;;;;;;;;;;x
 NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_ENG_TPG;$ORDER$Opium War;;;;;;;;;;;;;x
+NORMAL_STOP_FRENCH_COLONIAL_AMBITIONS;War of French Containment;;;;;;;;;;;;;x
 NORMAL_SUBSTATE_STATE_NAME;$ORDER$$FIRST$ Conquest of $COUNTRY_ADJ$ $STATE$;$ORDER$$FIRST$ conquête de $STATE$;$ORDER$$FIRST$e Eroberung von $STATE$;;;;;;;;;;;x
 NORMAL_SYKES_PICOT_WAR_NAME;The$ORDER$Asia Minor Expedition;;;;;;;;;;;;;x
 NORMAL_SYKES_PICOT_WAR_NAME_ENG_TUR;The Asia Minor Expedition;;;;;;;;;;;;;x
@@ -338,6 +340,7 @@ NORMAL_WAR_NAME_REPARATIONS;The $ORDER$$FIRST$–$SECOND$ War;;;;;;;;;;;;;x
 NORMAL_WAR_NAME_REPARATIONS_CHL_PBC;The $ORDER$War of the Confederation;;;;;;;;;;;;;x
 NORMAL_WAR_NATURAL_BORDERS_NAME;$ORDER$$FIRST$–$SECOND$ War of French Restoration;;;;;;;;;;;;;x
 NORMAL_WAR_NEGOTIATE_NAME;$ORDER$$SECOND$ Transfer of $STATE$ to $FIRST$;;;;;;;;;;;;;x
+NORMAL_WAR_OF_THE_AMERICAS;War of the Americas;;;;;;;;;;;;;x
 NORMAL_WAR_PADRI_WAR;The Padri War;;;;;;;;;;;;;x
 NORMAL_WAR_PROTECTORATE_NAME;$ORDER$Acquisition of $FIRST$ $SECOND_COUNTRY$;$ORDER$ $FIRST$ acquisition de $SECOND$;$ORDER$ Übernahme von $FIRST$ $SECOND$;;;;;;;;;;;x
 NORMAL_WAR_PROTECTORATE_NAME_ENG_ASH;The 2nd Ashanti Expedition;;;;;;;;;;;;;x
