More minas gerais stuff

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -674,7 +674,7 @@ REW_ADJ;Rewah;;;;;;;;;;;;;x
 RGA_ADJ;Constantine;;;;;;;;;;;;;x
 RGR_ADJ;Riograndense;;;;;;;;;;;;;x
 RGS_ADJ;Riograndense;;;;;;;;;;;;;x
-MNG_ADJ;Mineiro;;;;;;;;;;;;;x
+MGS_ADJ;Mineiro;;;;;;;;;;;;;x
 RJL_ADJ;Julianense;;;;;;;;;;;;;x
 RHI_ADJ;Rhinelander;Rhénan;Rheinlander;;;;;;;;;;;x
 RHO_ADJ;Rhodesian;rhodésien;Rhodesisch;;;;;;;;;;;x
