--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -524,6 +524,7 @@ RGA;Constantine Beylik;;;;;;;;;;;;;x
 RGR;Rio Grande;;;;;;;;;;;;;x
 RGS;Rio Grande do Sul;;;;;;;;;;;;;x
 RJL;Juliana;;;;;;;;;;;;;x
+MGS;Minas Gerais;;;;;;;;;;;;;x
 RHI;Rhineland;Rhénanie;Rheinland;;;;;;;;;;;x
 RHO;Southern Rhodesia;Rhodésie du sud;Südrhodesien;;;;;;;;;;;x
 RIA;Riau-Lingga;;;;;;;;;;;;;x
