--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -525,6 +525,7 @@ RGR;Rio Grande;;;;;;;;;;;;;x
 RGS;Rio Grande do Sul;;;;;;;;;;;;;x
 RJL;Juliana;;;;;;;;;;;;;x
 MGS;Minas Gerais;;;;;;;;;;;;;x
+GPR;Grão Para;;;;;;;;;;;;;x
 RHI;Rhineland;Rhénanie;Rheinland;;;;;;;;;;;x
 RHO;Southern Rhodesia;Rhodésie du sud;Südrhodesien;;;;;;;;;;;x
 RIA;Riau-Lingga;;;;;;;;;;;;;x
