--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -677,6 +677,7 @@ RGS_ADJ;Riograndense;;;;;;;;;;;;;x
 MGS_ADJ;Mineiro;;;;;;;;;;;;;x
 GPR_ADJ;Paraense;;;;;;;;;;;;;x
 RJL_ADJ;Julianense;;;;;;;;;;;;;x
+MAR_ADJ;Maranhense;;;;;;;;;;;;;x
 RHI_ADJ;Rhinelander;Rhénan;Rheinlander;;;;;;;;;;;x
 RHO_ADJ;Rhodesian;rhodésien;Rhodesisch;;;;;;;;;;;x
 RIA_ADJ;Riau;;;;;;;;;;;;;x
