--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -526,6 +526,7 @@ RGS;Rio Grande do Sul;;;;;;;;;;;;;x
 RJL;Juliana;;;;;;;;;;;;;x
 MGS;Minas Gerais;;;;;;;;;;;;;x
 GPR;Grão Para;;;;;;;;;;;;;x
+MAR;Maranhão;;;;;;;;;;;;;x
 RHI;Rhineland;Rhénanie;Rheinland;;;;;;;;;;;x
 RHO;Southern Rhodesia;Rhodésie du sud;Südrhodesien;;;;;;;;;;;x
 RIA;Riau-Lingga;;;;;;;;;;;;;x
