Rio de Janeiro added

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -61,7 +61,7 @@ AZH_ADJ;Ruwallah;;;;;;;;;;;;;x
 BAB_ADJ;Babylonian;babylonien;Babylonisch;;;;;;;;;;;x
 BAD_ADJ;Badenian;Bade;Baden;;;;;;;;;;;x
 BAG_ADJ;Bagirmi;;;;;;;;;;;;;x
-BAH_ADJ;Bahraini;;;;;;;;;;;;;x
+BAH_ADJ;Bahiano;;;;;;;;;;;;;x
 BAL_ADJ;Balinese;Balinais;Balinesisch;;;;;;;;;;;x
 BAN_ADJ;Banatian;;;;;;;;;;;;;x
 BAS_ADJ;Bastar;Bastar;Bastar;;;;;;;;;;;x
@@ -681,6 +681,7 @@ MAR_ADJ;Maranhense;;;;;;;;;;;;;x
 RHI_ADJ;Rhinelander;Rhénan;Rheinlander;;;;;;;;;;;x
 RHO_ADJ;Rhodesian;rhodésien;Rhodesisch;;;;;;;;;;;x
 RIA_ADJ;Riau;;;;;;;;;;;;;x
+RIO_ADJ;Guanabara;;;;;;;;;;;;;x
 RJK_ADJ;Rajkot;;;;;;;;;;;;;x
 RMG_ADJ;Romagnan;;;;;;;;;;;;;x
 ROM_ADJ;Romanian;Roumain;Rumänisch;;;;;;;;;;;x
