--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1158,6 +1158,7 @@ RGR_federal_democracy;Republic of the Rio Grande;;;;;;;;;;;;;x
 RGS_fascist_dictatorship;Pampas;;;;;;;;;;;;;x
 RJL_democracy;Juliana Republic;;;;;;;;;;;;;x
 RJL_monarchy;Juliana Kingdom;;;;;;;;;;;;;x
+RIO_democracy2;Guanabara Republic;;;;;;;;;;;;;x
 RHO_absolute_monarchy;Southern Rhodesia;Rhodésie du sud;Südrhodesien;;;;;;;;;;;x
 RHO_colonial_company;Rhodesia;;;;;;;;;;;;;x
 RHO_democracy;Rhodesia;;;;;;;;;;;;;x
