--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -523,6 +523,7 @@ REW;Rewah;;;;;;;;;;;;;x
 RGA;Constantine Beylik;;;;;;;;;;;;;x
 RGR;Rio Grande;;;;;;;;;;;;;x
 RGS;Rio Grande do Sul;;;;;;;;;;;;;x
+RIO;Rio de Janeiro;;;;;;;;;;;;;x
 RJL;Juliana;;;;;;;;;;;;;x
 MGS;Minas Gerais;;;;;;;;;;;;;x
 GPR;Grão Para;;;;;;;;;;;;;x
