Transatlantic Republic of Mato Grosso added

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -683,6 +683,7 @@ RHO_ADJ;Rhodesian;rhodésien;Rhodesisch;;;;;;;;;;;x
 RIA_ADJ;Riau;;;;;;;;;;;;;x
 RIO_ADJ;Guanabara;;;;;;;;;;;;;x
 SPL_ADJ;Paulista;;;;;;;;;;;;;x
+MGT_ADJ;Mato Grossense;;;;;;;;;;;;;x
 RJK_ADJ;Rajkot;;;;;;;;;;;;;x
 RMG_ADJ;Romagnan;;;;;;;;;;;;;x
 ROM_ADJ;Romanian;Roumain;Rumänisch;;;;;;;;;;;x
