--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -529,6 +529,7 @@ MGS;Minas Gerais;;;;;;;;;;;;;x
 GPR;Grão Para;;;;;;;;;;;;;x
 MAR;Maranhão;;;;;;;;;;;;;x
 SPL;São Paulo;;;;;;;;;;;;;x
+MTG;Transatlantic Republic of Mato Grosso;;;;;;;;;;;;;x
 RHI;Rhineland;Rhénanie;Rheinland;;;;;;;;;;;x
 RHO;Southern Rhodesia;Rhodésie du sud;Südrhodesien;;;;;;;;;;;x
 RIA;Riau-Lingga;;;;;;;;;;;;;x
