--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1550,3 +1550,5 @@ punctation_of_olmutz;Punctation of Olmutz;;;;;;;;;;;;;x
 punctation_of_olmutz_desc;Backed into a corner by other Great Powers, we had to abandon ambitions of leading Germany, for now.;;;;;;;;;;;;;x
 militarization_of_society;Militarization of Society;;;;;;;;;;;;;x
 militarization_of_society_desc;Militarizing our society;;;;;;;;;;;;;x
+child_emperor;Child Emperor;;;;;;;;;;;;;x
+child_emperor_desc;Dom Pedro II grew up on the throne, and the country grew with him.;;;;;;;;;;;;;x
