American Civil War intervention cb

--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -27,6 +27,10 @@ acquire_substate_region;Acquire substate region;Acquérir une région comme Sous-É
 acquire_substate_region_desc;Acquire a region from enemy §Ysubstate§W;Acquérir une région d'un §YSous-État§W ennemi;Beschafft eine Region des Feindes §Ysubstate§W;;;;;;;;;;;x
 acquire_substate_region_setup;Acquire $STATE$ from $RECIPIENT$;Prendre $STATE$ de $RECIPIENT$;$STATE$ von $RECIPIENT$ erobern.;;;;;;;;;;;x
 acquire_substate_region_short;Acquire $STATE$;Prendre $STATE$;$STATE$ erobern;;;;;;;;;;;x
+acw_intervention;End the American Civil War;;;;;;;;;;;;;x
+acw_intervention_desc;This conflict is severely hurting our cotton imports and should be ended as soon as possible;;;;;;;;;;;;;x
+acw_intervention_setup;Intervene in the American Civil War;;;;;;;;;;;;;x
+acw_intervention_short;Intervene in the American Civil War;;;;;;;;;;;;;x
 add_to_sphere;Add to Sphere;ajouter à la sphère;In Einflusssphäre aufnehmen;;;;;;;;;;;x
 add_to_sphere_desc;Add country to our §YSphere of Influence§W;Ajouter un pays à notre §Ysphère d'influence§W;Fügen Sie das Land Ihrer §YEinflusssphäre§W hinzu.;;;;;;;;;;;x
 add_to_sphere_setup;Add $RECIPIENT$ to Sphere of Influence;ajouter $RECIPIENT$ à la sphère d'influence;$RECIPIENT$ in Einflusssphäre aufnehmen;;;;;;;;;;;x
