--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -193,6 +193,7 @@ AGRESSION_WAR_UNIFICATION_NAME_SAR_AUS;The $ORDER$Italian War of Independence;;;
 AGRESSION_WAR_UNIFICATION_NAME_SAR_KUK;The $ORDER$Italian War of Independence;;;;;;;;;;;;;x
 AGRESSION_WAR_WEBSTER_ASHBURTON;The Aroostook War;;;;;;;;;;;;;x
 GREAT_WAR_NAME;The $ORDER$Great War;La $ORDER$ Grande Guerre;Der $ORDER$Großer Krieg;;;;;;;;;;;x
+NORMAL_ACW_INTERVENTION;$FIRST$ Intervention in the American Civil War;;;;;;;;;;;;;x
 NORMAL_CALL_ALLIES_WAR_NAME;$ORDER$$FIRST$ Call to Arms;;;;;;;;;;;;;
 NORMAL_CIVIL_WAR_NAME;$ORDER$$FIRST$ Civil War;$ORDER$ guerre civile $FIRST$;$ORDER$$FIRST$ Bürgerkrieg;;;;;;;;;;;x
 NORMAL_CIVIL_WAR_NAME_ARC_ENT;The $ORDER$Platine War;;;;;;;;;;;;;x
