--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -6535,3 +6535,4 @@ YOU_WON;§GYou Won;§GVous avez gagné;§GGewonnen;;;;;;;;;;;x
 YOUKICKED;You were kicked by the host for your evil deeds!;Votre mauvais comportement vous a valu de vous faire expulser par l'hôte !;;;;;;;;;;;;x
 ZOOM_IN;Zoom in;Zoom avant;;;;;;;;;;;;x
 ZOOM_OUT;Zoom out;Zoom arrière;;;;;;;;;;;;x
+majority_coup_check_tooltip;§RWarning:§! The outcome will change based on Pedro's age. \nYou will be able to back down before confirming the coup.§b;;;;;;;;;;;;x
