--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3455,3 +3455,4 @@ paris_congress_ltu_desc;German Hegemony in Europe is certain if we do not unite 
 paris_congress_ltu_title;$YEAR$ Congress of Paris;;;;;;;;;;;;;x
 majority_coup_title;The Majority Coup;;;;;;;;;;O Golpe da Maioridade;;;x
 majority_coup_desc;Our prince is too young to rule.\n \nWe can place him on the throne to suppress the rebels and appease the people, but changing his age of majority to achieve this goal could have unforeseen repercussions.;;;;;;;;;;Nosso príncipe é muito jovem para governar. \n \nPodemos colocá-lo no trono para acalmar rebeldes e o povo, mas dobrar a lei para mudar a sua maioridade para alcançar esse objetivo pode ter repercussões imprevistas.;;;x
+pedro_ii_crowned;Dom Pedro II Crowned;;;;;;;;;;;;;x
