--- a/TGC/localisation/00_ui-misc.csv
+++ b/TGC/localisation/00_ui-misc.csv
@@ -6536,3 +6536,4 @@ YOUKICKED;You were kicked by the host for your evil deeds!;Votre mauvais comport
 ZOOM_IN;Zoom in;Zoom avant;;;;;;;;;;;;x
 ZOOM_OUT;Zoom out;Zoom arrière;;;;;;;;;;;;x
 majority_coup_check_tooltip;§RWarning:§! The outcome will change based on Pedro's age. \nYou will be able to back down before confirming the coup.§b;;;;;;;;;;;;x
+rio_grande_peace_deal_tooltip;§RWarning:§! The negotiations options will changed based on the war. \nMany failed attempts at negotiating will make the situation worse.§b;;;;;;;;;;;;x
