Added early republican coup for brazil

--- a/TGC/localisation/00_decisions.csv
+++ b/TGC/localisation/00_decisions.csv
@@ -3458,3 +3458,5 @@ majority_coup_desc;Our prince is too young to rule.\n \nWe can place him on the 
 pedro_ii_crowned;Dom Pedro II Crowned;;;;;;;;;;;;;x
 negociate_peace_with_RGS_title;Negotiate peace with the Farrapos;;;;;;;;;;;;;x
 negociate_peace_with_RGS_desc;\n \n \nWe can negotiate peace deals to talk the rebellion to an end. \n \nSince their main reasons to revolt were economical, we may be able to make ammends and establish a common ground.;;;;;;;;;;;;;x
+early_republican_coup_title;Question the Monarchy;;;;;;;;;;;;;x
+early_republican_coup_desc;Our prince is too young to rule.\n \n And with no viable alternatives among the heirs, the people grow increasingly restless, and there are whispers of rebellions. Perhaps this is a telling sign that the monarchy's time has passed.;;;;;;;;;;;;;x
