--- a/TGC/localisation/00_countries-names-gov't.csv
+++ b/TGC/localisation/00_countries-names-gov't.csv
@@ -1157,6 +1157,8 @@ RGR_fascist_dictatorship;Rio Bravo;;;;;;;;;;;;;x
 RGR_federal_democracy;Republic of the Rio Grande;;;;;;;;;;;;;x
 RGS_fascist_dictatorship;Pampas;;;;;;;;;;;;;x
 RJL_democracy;Juliana Republic;;;;;;;;;;;;;x
+GPR_democracy;Cabanos;;;;;;;;;;;;;x
+GPR_monarchy;Kingdom of Amazonas;;;;;;;;;;;;;x
 RJL_monarchy;Juliana Kingdom;;;;;;;;;;;;;x
 RIO_democracy2;Guanabara Republic;;;;;;;;;;;;;x
 RHO_absolute_monarchy;Southern Rhodesia;Rhodésie du sud;Südrhodesien;;;;;;;;;;;x
