--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -526,7 +526,7 @@ RGS;Rio Grande do Sul;;;;;;;;;;;;;x
 RIO;Rio de Janeiro;;;;;;;;;;;;;x
 RJL;Juliana;;;;;;;;;;;;;x
 MGS;Minas Gerais;;;;;;;;;;;;;x
-GPR;Grão Para;;;;;;;;;;;;;x
+GPR;Cabano Republic;;;;;;;;;;;;;x
 MAR;Maranhão;;;;;;;;;;;;;x
 SPL;São Paulo;;;;;;;;;;;;;x
 MTG;Transatlantic Republic of Mato Grosso;;;;;;;;;;;;;x
