--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -865,3 +865,6 @@ EVTNAME8009;Abandon the Empire?;;;;;;;;;;;;;x
 EVTDESC8009;\n\nOur prince is too young to rule, and there are no other suitable heirs available. The people are restless, and rebels are plotting against the nation. Perhaps this is a sign that our monarchy is no longer meant to be. We should consider following the example of other new world countries and transitioning to a republic. \n \nIt's time to leave behind the old ways of the old world and embrace the dawn of a new era.;;;;;;;;;;;;;x
 EVTOPTA8009;So be it! We can wait no longer!;;;;;;;;;;;;;x
 EVTOPTB8009;Let's pretend we never had this conversation.;;;;;;;;;;;;;x
+EVTDESC8010;In spite of the fact that the new consort looked nothing like the pictures sent to the Emperor to help make his choice, after initial hesitations the Emperor has decided to accept his marriage to Princess Teresa Cristina, daughter of the King of the Two Sicilies.;;;;;;;;;;;;;x
+EVTNAME8010;Dom Pedro II Weds;;;;;;;;;;;;;x
+EVTOPTA8010;Excellent;;;;;;;;;;;;;x
