Dom Pedro II is no longer immortal

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -865,6 +865,10 @@ EVTNAME8009;Abandon the Empire?;;;;;;;;;;;;;x
 EVTDESC8009;\n\nOur prince is too young to rule, and there are no other suitable heirs available. The people are restless, and rebels are plotting against the nation. Perhaps this is a sign that our monarchy is no longer meant to be. We should consider following the example of other new world countries and transitioning to a republic. \n \nIt's time to leave behind the old ways of the old world and embrace the dawn of a new era.;;;;;;;;;;;;;x
 EVTOPTA8009;So be it! We can wait no longer!;;;;;;;;;;;;;x
 EVTOPTB8009;Let's pretend we never had this conversation.;;;;;;;;;;;;;x
-EVTDESC8010;In spite of the fact that the new consort looked nothing like the pictures sent to the Emperor to help make his choice, after initial hesitations the Emperor has decided to accept his marriage to Princess Teresa Cristina, daughter of the King of the Two Sicilies.;;;;;;;;;;;;;x
 EVTNAME8010;Dom Pedro II Weds;;;;;;;;;;;;;x
+EVTDESC8010;In spite of the fact that the new consort looked nothing like the pictures sent to the Emperor to help make his choice, after initial hesitations the Emperor has decided to accept his marriage to Princess Teresa Cristina, daughter of the King of the Two Sicilies.;;;;;;;;;;;;;x
 EVTOPTA8010;Excellent;;;;;;;;;;;;;x
+EVTNAME8011;The Death of Pedro II;;;;;;;;;;;;;x
+EVTDESC8011;The support for the monarchy remained overwhelming in the country and none ever dreamed of having it otherwise. Pedro II was as popular as ever, a father for each of his citizens. Still, letters he wrote reveal a man grown world-weary with age and having an increasingly alienated and pessimistic outlook. His last couple of years were lonely and melancholic and his health had considerably worsened. One day in $YEAR$, while residing in Paris, he caught an infection that progressed quickly into pneumonia Pedro rapidly declined and died surrounded by his family. His last words were ‘May God grant me these last wishes-peace and prosperity for Brazil!’. While the body was being prepared, a sealed package in the room was found, and next to it a message written by the Emperor himself: ‘It is soil from my country, I wish it to be placed in my coffin in case I die away from my fatherland.’;;;;;;;;;;;;;x
+EVTOPTA8011;He will be missed.;;;;;;;;;;;;;x
+EVTOPTB8011;Maybe we should abolish the monarchy.;;;;;;;;;;;;;x
