Government Campaign cost rebalance
Costs rebalanced for Government Campaigns: 10% (most), 15%, 20% (birthrate campaigns) of monthly maximum tax for the country, scaled by budget size, it will no longer be scaled by country size (number of provinces)

--- a/TGCDirectImmigration/localisation/00_decisions-options-direct-immigration.csv
+++ b/TGCDirectImmigration/localisation/00_decisions-options-direct-immigration.csv
@@ -20,7 +20,7 @@ override_immigrant_options_title;Immigration Options;;;;;;;;;;;;;x
 override_start_direct_assimilation_title;Start an Assimilation Campaign;;;;;;;;;;;;;x
 override_start_direct_assimilation_desc;This will allow you to target a specific state and attempt to assimilate cultures there, regardless of cores, for a period of 5 years. If you do not have culture cores of other nations, there will be no effect to this campaign.;;;;;;;;;;;;;x
 direct_immigration_program;Active Direct Migration Campaign;;;;;;;;;;;;;x
-direct_immigration_program_desc;We're currently engaging in a state sponsored migration campaign. §YCampaign Cost:§! Roughly §R5%§! of your maximum daily tax income, scaled by country size, every month.;;;;;;;;;;;;;x
+direct_immigration_program_desc;We're currently engaging in a state sponsored migration campaign. §YCampaign Cost:§! Roughly §R3%§! of your maximum monthly tax income per Province Selector and 1% per Immigrator every month.;;;;;;;;;;;;;x
 lingering_effects_DI;Lingering Effects of Colonization;;;;;;;;;;;;;x
 lingering_effects_DI_desc;This province has recently seen a number of people moved to it by force.;;;;;;;;;;;;;x
 assimilation_campaign_in_progress;Recent Assimilation Campaign;;;;;;;;;;;;;x
