--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -875,3 +875,9 @@ EVTOPTB8011;Maybe we should abolish the monarchy.;;;;;;;;;;;;;x
 EVTDESC8012;The monarchy has been abolished! The new government has allowed the emperor to retire and live out the rest of his life on a modest estate near Rio. Many Brazillians still respect him and his legacy, but his significance will no doubt wane as the years pass. The last link to the European legacy has been severed, and lives only in the person of a private citizen, Mr. Pedro Braganza.;;;;;;;;;;;;;x
 EVTNAME8012;A Retired Emperor;;;;;;;;;;;;;x
 EVTOPTA8012;The times, they are a-changing;;;;;;;;;;;;;x
+EVTNAME8100;Farrapos pushed back!;;;;;;;;;;;;;x
+EVTDESC8100;Our army managed to push back the farraupilha army and secure our land back! Another triumph standing as a testament to the unyielding commitment and sacrifice of our soldiers.;;;;;;;;;;;;;x
+EVTOPTA8100;This land is rightfully ours!;;;;;;;;;;;;;x
+EVTNAME8101;The Farrapos pushback!;;;;;;;;;;;;;x
+EVTDESC8101;The Farroupilha Army managed to conquer and secure some of our land! This won't be without payback!;;;;;;;;;;;;;x
+EVTOPTA8101;Dammnit!;;;;;;;;;;;;;x
