Juliana Republic and related events

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -881,3 +881,13 @@ EVTOPTA8100;This land is rightfully ours!;;;;;;;;;;;;;x
 EVTNAME8101;The Farrapos pushback!;;;;;;;;;;;;;x
 EVTDESC8101;The Farroupilha Army managed to conquer and secure some of our land! This won't be without payback!;;;;;;;;;;;;;x
 EVTOPTA8101;Dammnit!;;;;;;;;;;;;;x
+EVTNAME8102;A Tomada da Laguna!;;;;;;;;;;;;;x
+EVTDESC8102;We managed to secure the city of Laguna, we can control now the entire province! The locals want to secede into an allied republic named "Juliana Republic".;;;;;;;;;;;;;x
+EVTOPTA8102;Let them be, they will be valuable allies.;;;;;;;;;;;;;x
+EVTOPTA8102;We need to stay together if we want to win this war.;;;;;;;;;;;;;x
+EVTNAME8103;A Tomada da Laguna!;;;;;;;;;;;;;x
+EVTDESC8103;The Farrapos managed to secure the city of Laguna, putting on risk the entire province! And now they are calling themselves the "Juliana Republic", yet another bunch of rebels! We should deal with this at once.;;;;;;;;;;;;;x
+EVTOPTA8103;Filthy rebels!;;;;;;;;;;;;;x
+EVTNAME8104;A Queda da Laguna!;;;;;;;;;;;;;x
+EVTDESC8104;Our army managed to take back the city of Laguna!;;;;;;;;;;;;;x
+EVTOPTA8104;Cheers!;;;;;;;;;;;;;x
