--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -889,5 +889,5 @@ EVTNAME8103;A Tomada da Laguna!;;;;;;;;;;;;;x
 EVTDESC8103;The Farrapos managed to secure the city of Laguna, putting on risk the entire province! And now they are calling themselves the "Juliana Republic", yet another bunch of rebels! We should deal with this at once.;;;;;;;;;;;;;x
 EVTOPTA8103;Filthy rebels!;;;;;;;;;;;;;x
 EVTNAME8104;A Queda da Laguna!;;;;;;;;;;;;;x
-EVTDESC8104;Our army managed to take back the city of Laguna!;;;;;;;;;;;;;x
+EVTDESC8104;Our army managed to take back the city of Laguna! \n \nThis is the end of the so called "Juliana Republic""";;;;;;;;;;;;;x
 EVTOPTA8104;Cheers!;;;;;;;;;;;;;x
