Golden circle dismantlement cb

--- a/TGC/localisation/00_war-names.csv
+++ b/TGC/localisation/00_war-names.csv
@@ -230,6 +230,7 @@ NORMAL_CUT_DOWN_TO_SIZE_WAR_NAME_RUS_TUR;The $ORDER$Crimean War;;;;;;;;;;;;;x
 NORMAL_CRIMEAN_WAR_NAME_RUS_TUR;The $ORDER$Crimean War;;;;;;;;;;;;;x
 NORMAL_DEMOCRACY_WAR_NAME;$ORDER$$FIRST$ Restoration of $SECOND$ Democracy;;;;;;;;;;;;;x
 NORMAL_EARLY_WAR_CONCESSION_NAME;$ORDER$War of the $STATE$ Concession;$ORDER$ Guerre de concession de $STATE$;$ORDER$ Krieg der $STATE$-Konzession;;;;;;;;;;;x
+NORMAL_GOLDEN_CIRCLE_DISMANTLEMENT;The $ORDER$ Anti-Confederacy War;;;;;;;;;;;;;x
 NORMAL_PUNITIVE_EXPEDITION_WAR_NAME;The $ORDER$$FIRST$–$SECOND$ War;;;;;;;;;;;;;x
 NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_ENG_PER;The $ORDER$Anglo–Persian War;;;;;;;;;;;;;x
 NORMAL_PUNITIVE_EXPEDITION_WAR_NAME_ENG_QNG;The $ORDER$Opium War;;;;;;;;;;;;;x
