--- a/TGC/localisation/00_war-cb.csv
+++ b/TGC/localisation/00_war-cb.csv
@@ -181,6 +181,10 @@ french_conquest_of_louisiana_usa;Defend Louisiana;;;;;;;;;;;;;x
 french_conquest_of_louisiana_usa_desc;Louisiana is rightfully ours and we must defend ourselves from French aggression.;;;;;;;;;;;;;x
 french_conquest_of_louisiana_usa_setup;Defend Louisiana;;;;;;;;;;;;;x
 french_conquest_of_louisiana_usa_short;Defend Louisiana;;;;;;;;;;;;;x
+golden_circle_dismantling;Destroy the CSA;;;;;;;;;;;;;x
+golden_circle_dismantling_desc;Stop the savage Knights of the Golden Circle;;;;;;;;;;;;;x
+golden_circle_dismantling_setup;Destroy the CSA;;;;;;;;;;;;;x
+golden_circle_dismantling_short;Destroy the CSA;;;;;;;;;;;;;x
 great_game_cb;The Great Game;Réduire;Größe reduzieren;;;;;;;;;;;x
 great_game_cb_desc;The Great Game between Russia and the British Empire demands that all §Yuncivilized nations§W in Central Asia be turned into §Ypuppets§W to prevent the other from doing the same.;Obliger un autre §Ypays§W ?se désarmer et ?nous verser des compensations;Zwischen Sie ein anderes §YLand§W zur Abrüstung und zu Reparationszahlungen an uns.;;;;;;;;;;;x
 great_game_cb_setup;$RECIPIENT$ becomes a puppet of $ACTOR$;$RECIPIENT$ devient satellite de $ACTOR$;$RECIPIENT$ wird eine Marionette von $ACTOR$;;;;;;;;;;;x
