Cabanos loc and pictures, farrapos negotiation

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -891,3 +891,9 @@ EVTOPTA8103;Filthy rebels!;;;;;;;;;;;;;x
 EVTNAME8104;A Queda da Laguna!;;;;;;;;;;;;;x
 EVTDESC8104;Our army managed to take back the city of Laguna! \n \nThis is the end of the so called "Juliana Republic""";;;;;;;;;;;;;x
 EVTOPTA8104;Cheers!;;;;;;;;;;;;;x
+EVTNAME8150;Cabanos pushed back!;;;;;;;;;;;;;x
+EVTDESC8150;\n\nThe Imperial Army has cleaned a province from the Cabanos hold in Grão-Para! \n\nUnrest is still high, but the province is now under our control.;;;;;;;;;;;;;x
+EVTOPTA8150;Cheers!;;;;;;;;;;;;;x
+EVTNAME8151;The Cabanagem Spreads!;;;;;;;;;;;;;x
+EVTDESC8151;\n\nThe Cabanos have taken hold of yet another province in Grão-Para! \n\nTheir rebels are spreading like wild fire and wrecking havoc on our northern provinces!;;;;;;;;;;;;;x
+EVTOPTA8151;Dammnit!;;;;;;;;;;;;;x
