--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -875,6 +875,9 @@ EVTOPTB8011;Maybe we should abolish the monarchy.;;;;;;;;;;;;;x
 EVTDESC8012;The monarchy has been abolished! The new government has allowed the emperor to retire and live out the rest of his life on a modest estate near Rio. Many Brazillians still respect him and his legacy, but his significance will no doubt wane as the years pass. The last link to the European legacy has been severed, and lives only in the person of a private citizen, Mr. Pedro Braganza.;;;;;;;;;;;;;x
 EVTNAME8012;A Retired Emperor;;;;;;;;;;;;;x
 EVTOPTA8012;The times, they are a-changing;;;;;;;;;;;;;x
+EVTDESC8013;Being a constitutional monarch, our Emperor Dom Pedro II has quite a lot of time to travel the world and meet the many personalities therein. With his daughter Isabel at home as his regent, Dom Pedro is able to visit Egypt, Britain, Austria and France, speaking with intellectuals and even ordinary people. He always demands that he is treated as just a man, and not an emperor, and he has gained considerable fame overseas.;;;;;;;;;;;;;x
+EVTNAME8013;Dom Pedro's Travels;;;;;;;;;;;;;x
+EVTOPTA8013;A truly worldly man.;;;;;;;;;;;;;x
 EVTNAME8100;Farrapos pushed back!;;;;;;;;;;;;;x
 EVTDESC8100;Our army managed to push back the farraupilha army and secure our land back! Another triumph standing as a testament to the unyielding commitment and sacrifice of our soldiers.;;;;;;;;;;;;;x
 EVTOPTA8100;This land is rightfully ours!;;;;;;;;;;;;;x
