Garibaldi as general for RGS

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -894,6 +894,9 @@ EVTOPTA8103;Filthy rebels!;;;;;;;;;;;;;x
 EVTNAME8104;A Queda da Laguna!;;;;;;;;;;;;;x
 EVTDESC8104;Our army managed to take back the city of Laguna! \n \nThis is the end of the so called "Juliana Republic""";;;;;;;;;;;;;x
 EVTOPTA8104;Cheers!;;;;;;;;;;;;;x
+EVTDESC8105;An Italian has joined our forces and brings much support for the uprising.;;;;;;;;;;;;;x
+EVTNAME8105;New Arrivals;;;;;;;;;;;;;x
+EVTOPTA8105;This will give us the chance we need to win;;;;;;;;;;;;;x
 EVTNAME8150;Cabanos pushed back!;;;;;;;;;;;;;x
 EVTDESC8150;\n\nThe Imperial Army has cleaned a province from the Cabanos hold in Grão-Para! \n\nUnrest is still high, but the province is now under our control.;;;;;;;;;;;;;x
 EVTOPTA8150;Cheers!;;;;;;;;;;;;;x
