Farroupilha end game and negotiations

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -897,6 +897,10 @@ EVTOPTA8104;Cheers!;;;;;;;;;;;;;x
 EVTDESC8105;An Italian has joined our forces and brings much support for the uprising.;;;;;;;;;;;;;x
 EVTNAME8105;New Arrivals;;;;;;;;;;;;;x
 EVTOPTA8105;This will give us the chance we need to win;;;;;;;;;;;;;x
+EVTNAME8114;The Juliana Question;;;;;;;;;;;;;x
+EVTDESC8114;During the war, we took hold of Santa Catarina, they fought by our side and we stood as one united country, now, they want to secede into the Juliana Republic \nAllowing them to secede would weaken our country, but would be a bit hypocritical of us not to allow that.;;;;;;;;;;;;;x
+EVTOPTA8114;We need to stay as strong as we can.;;;;;;;;;;;;;x
+EVTOPTB8114;They are our sister republic and should be free.;;;;;;;;;;;;;x
 EVTNAME8150;Cabanos pushed back!;;;;;;;;;;;;;x
 EVTDESC8150;\n\nThe Imperial Army has cleaned a province from the Cabanos hold in Grão-Para! \n\nUnrest is still high, but the province is now under our control.;;;;;;;;;;;;;x
 EVTOPTA8150;Cheers!;;;;;;;;;;;;;x
