--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1550,5 +1550,13 @@ punctation_of_olmutz;Punctation of Olmutz;;;;;;;;;;;;;x
 punctation_of_olmutz_desc;Backed into a corner by other Great Powers, we had to abandon ambitions of leading Germany, for now.;;;;;;;;;;;;;x
 militarization_of_society;Militarization of Society;;;;;;;;;;;;;x
 militarization_of_society_desc;Militarizing our society;;;;;;;;;;;;;x
+loyalists_surge;Loyalists Control;;;;;;;;;;;;;x
+loyalists_surge_desc;Loyalists of the Crown are dominant in our Dominion;;;;;;;;;;;;;x
+patriot_open_revolts;Republican Surge;;;;;;;;;;;;;x
+patriot_open_revolts_desc;Republicans that call themselves "Patriots" have secretly started rearming the militias. We have turned a blind eye.;;;;;;;;;;;;;x
+american_dominions;American Dominions;;;;;;;;;;;;;x
+american_dominions_desc;The Crown dominates the Atlantic Seaboard. It is a costly venture.;;;;;;;;;;;;;x
+under_the_british_crown;Under the British Crown;;;;;;;;;;;;;x
+under_the_british_crown_desc;We are subjects of Great Britain;;;;;;;;;;;;;x
 child_emperor;Child Emperor;;;;;;;;;;;;;x
 child_emperor_desc;Dom Pedro II grew up on the throne, and the country grew with him.;;;;;;;;;;;;;x
