--- a/TGC/localisation/00_modifiers.csv
+++ b/TGC/localisation/00_modifiers.csv
@@ -1562,3 +1562,9 @@ under_the_british_crown;Under the British Crown;;;;;;;;;;;;;x
 under_the_british_crown_desc;We are subjects of Great Britain;;;;;;;;;;;;;x
 child_emperor;Child Emperor;;;;;;;;;;;;;x
 child_emperor_desc;Dom Pedro II grew up on the throne, and the country grew with him.;;;;;;;;;;;;;x
+farrapos_compromise_strong;Tratado do Poncho Verde;;;;;;;;;;;;;x
+farrapos_compromise_strong_desc;As part of the Poncho Verde Peace Treaty, we agreeded to adjusts the taxes and tarrifs to protect the local Charque producers.;;;;;;;;;;;;;x
+farrapos_compromise_mild;Tratado do Poncho Verde;;;;;;;;;;;;;x
+farrapos_compromise_strong_mild;As part of the Poncho Verde Peace Treaty, we agreeded to adjusts the taxes and tarrifs to protect the local Charque producers.;;;;;;;;;;;;;x
+farrapos_compromise_fair;Tratado do Poncho Verde;;;;;;;;;;;;;x
+farrapos_compromise_strong_fair;As part of the Poncho Verde Peace Treaty, we agreeded to adjusts the tarrifs to protect the local Charque producers.;;;;;;;;;;;;;x
