farroupilha loc and pictures

--- a/TGC/localisation/00_events_0001000.csv
+++ b/TGC/localisation/00_events_0001000.csv
@@ -897,13 +897,25 @@ EVTOPTA8104;Cheers!;;;;;;;;;;;;;x
 EVTDESC8105;An Italian has joined our forces and brings much support for the uprising.;;;;;;;;;;;;;x
 EVTNAME8105;New Arrivals;;;;;;;;;;;;;x
 EVTOPTA8105;This will give us the chance we need to win;;;;;;;;;;;;;x
-EVTNAME8114;The Juliana Question;;;;;;;;;;;;;x
-EVTDESC8114;During the war, we took hold of Santa Catarina, they fought by our side and we stood as one united country, now, they want to secede into the Juliana Republic \nAllowing them to secede would weaken our country, but would be a bit hypocritical of us not to allow that.;;;;;;;;;;;;;x
-EVTOPTA8114;We need to stay as strong as we can.;;;;;;;;;;;;;x
-EVTOPTB8114;They are our sister republic and should be free.;;;;;;;;;;;;;x
+EVTNAMEFARROUPILHAEND;The End of the Farroupilha;;;;;;;;;;;;;x
+EVTDESC8111;\nAfter a long and arduous struggle, Porto Alegre is under imperial control once again. Brazil emerges victorious against the Farrapos. \n\nWe crushed those rebels, we shall crush any others that come our way.;;;;;;;;;;;;;x
+EVTOPTA8111;Honor the dead.;;;;;;;;;;;;;x
+EVTOPTB8111;Hopefully they learned their lesson!;;;;;;;;;;;;;x
+EVTNAME8112;Porto Alegre stands victorious;;;;;;;;;;;;;x
+EVTDESC8112;\nAfter a long and arduous struggle, Porto Alegre is free. A hard fought battle, but a worthy one. \n\nThe imperial overlords refused to compromise, and we had no option but to seek our freedom. For long they ignore our demands, treated us like serfs instead of sons, but that's no more. We will lead our own destiny now.;;;;;;;;;;;;;x
+EVTOPTA8112;Our future is bright;;;;;;;;;;;;;x
+EVTNAME8113;Porto Alegre stands victorious;;;;;;;;;;;;;x
+EVTDESC8113;\nAfter a hard-fought war, Porto Alegre stands liberated as the Brazilian army fails to secure the province, allowing the rebels to solidify their position. \n\nThis represents a significant setback for the Brazilian Empire, casting a shadow of uncertainty over our future. We must brace ourselves for challenging times ahead and ensure that this rebellion is the last one to prevail.;;;;;;;;;;;;;x
+EVTOPTA8113;So be it, we don't need them.;;;;;;;;;;;;;x
+EVTOPTB8113;This is but a setback, a big one indeed, but they won't last much without us.;;;;;;;;;;;;;x
+EVTDESC8114;\nAfter a long and arduous struggle, Porto Alegre is once again under imperial control as Brazil emerges victorious against the Farrapos. \n\nThe triumph over the rebels marks a significant achievement, but it is important to recognize that the path to reclaiming Porto Alegre was not without sacrifices, and the toll of the conflict serves as a reminder of the hardships endured and the lives lost.;;;;;;;;;;;;;x
+EVTNAME8116;The Juliana Question;;;;;;;;;;;;;x
+EVTDESC8116;\nDuring the war, we took hold of Santa Catarina, they fought by our side and we stood as one united country, now, they want to secede into the Juliana Republic \n\nAllowing them to secede would weaken our country, but would be a bit hypocritical of us not to allow that.;;;;;;;;;;;;;x
+EVTOPTA8116;We need to stay as strong as we can.;;;;;;;;;;;;;x
+EVTOPTB8116;They are our sister republic and should be free.;;;;;;;;;;;;;x
 EVTNAME8150;Cabanos pushed back!;;;;;;;;;;;;;x
-EVTDESC8150;\n\nThe Imperial Army has cleaned a province from the Cabanos hold in Grão-Para! \n\nUnrest is still high, but the province is now under our control.;;;;;;;;;;;;;x
+EVTDESC8150;\nThe Imperial Army has cleaned a province from the Cabanos hold in Grão-Para! \n\nUnrest is still high, but the province is now under our control.;;;;;;;;;;;;;x
 EVTOPTA8150;Cheers!;;;;;;;;;;;;;x
 EVTNAME8151;The Cabanagem Spreads!;;;;;;;;;;;;;x
-EVTDESC8151;\n\nThe Cabanos have taken hold of yet another province in Grão-Para! \n\nTheir rebels are spreading like wild fire and wrecking havoc on our northern provinces!;;;;;;;;;;;;;x
-EVTOPTA8151;Dammnit!;;;;;;;;;;;;;x
+EVTDESC8151;\nThe Cabanos have taken hold of yet another province in Grão-Para! \n\nTheir rebels are spreading like wild fire and wrecking havoc on our northern provinces!;;;;;;;;;;;;;x
+EVTOPTA8151;Damnit!;;;;;;;;;;;;;x
